Merge Java21InputAstVisitor into JavaInputAstVisitor
In preparation for raising the minimum supported JDK version to JDK 21.

PiperOrigin-RevId: 811349632